Bake to image used for rendering glitch (bake feedback loop) #27120

Closed
opened 2011-04-22 14:25:06 +02:00 by Jędrzej Slewczuk · 10 comments

%%%I have noticed these three troubles and these appear randomly... Artifact it's lack of alpha support in bake and also irregular fill of 'black'. I have tested in trunk r36281 on Windows 7 (polish language). All details are in .mov and .blend files (after unpack .zip).%%%

%%%I have noticed these three troubles and these appear randomly... Artifact it's lack of alpha support in bake and also irregular fill of 'black'. I have tested in trunk r36281 on Windows 7 (polish language). All details are in .mov and .blend files (after unpack .zip).%%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%I use this method for generating UV Margin after I finished painting texture.%%%

%%%I use this method for generating UV Margin after I finished painting texture.%%%

%%%Ups... My mistake... It support alpha. I have forgotten to enabled it correct in material settings... But artifacts still appear sometimes...%%%

%%%Ups... My mistake... It support alpha. I have forgotten to enabled it correct in material settings... But artifacts still appear sometimes...%%%

%%%assigning to myself.%%%

%%%assigning to myself.%%%

%%%The problem is you're baking onto the same image you're using to render with so you get a feedback loop during the bake.

The fix here would be to duplicate the image buffer for baking or not allow this to happen at all and give an error.

Leave this open for now.%%%

%%%The problem is you're baking onto the same image you're using to render with so you get a feedback loop during the bake. The fix here would be to duplicate the image buffer for baking or not allow this to happen at all and give an error. Leave this open for now.%%%

%%%I prefer 'duplicate the image buffer for baking', because IMHO it's bad design (It's frustrating, and not artist friendly...): creating new UV Texture slot and new bitmap file JUST FOR simply adding UV Margins on texture which has finished editing, which it just need last touch - adding UV Margins...%%%

%%%I prefer 'duplicate the image buffer for baking', because IMHO it's bad design (It's frustrating, and not artist friendly...): creating new UV Texture slot and new bitmap file JUST FOR simply adding UV Margins on texture which has finished editing, which it just need last touch - adding UV Margins...%%%

%%%ubuntu 11.04 64bits Rev 40164

Alpha seems correctly supported,here.
You have to enable Use Alpha option in Image Sampling Panel in Texture Properties.

But another artifact came from your modeling. Overlapping faces for the ear is not a good choice.
You can use Two-sided Option in Texture Face Panel in Mesh Properties.
And you must detach ear from rest of the head to avoid white artefact.%%%

%%%ubuntu 11.04 64bits Rev 40164 Alpha seems correctly supported,here. You have to enable Use Alpha option in Image Sampling Panel in Texture Properties. But another artifact came from your modeling. Overlapping faces for the ear is not a good choice. You can use Two-sided Option in Texture Face Panel in Mesh Properties. And you must detach ear from rest of the head to avoid white artefact.%%%

%%%It's a bit complicated to detect if image should be duplicated or not and the only working way would be to detect feedback loops during baking and duplicated images if loop was found and then somehow images should be merged back. Detecting loop is simple enough but that image duplication is a really tricky thing and make code tangled and difficult to support. Discussed this with Brecht and he've got the same thinking.
Attaching patch which prevents baking to image used for rendering, want Brecht to glance at it before commiting.
Think if you're using such configuration for adding margin only it'll be more useful to have margin filter in image editor.%%%

%%%It's a bit complicated to detect if image should be duplicated or not and the only working way would be to detect feedback loops during baking and duplicated images if loop was found and then somehow images should be merged back. Detecting loop is simple enough but that image duplication is a really tricky thing and make code tangled and difficult to support. Discussed this with Brecht and he've got the same thinking. Attaching patch which prevents baking to image used for rendering, want Brecht to glance at it before commiting. Think if you're using such configuration for adding margin only it'll be more useful to have margin filter in image editor.%%%

%%%Commited to revision r43554. It might be improved, but for now it's the only way which fits design.
Thanks for the report, closing it now.%%%

%%%Commited to revision r43554. It might be improved, but for now it's the only way which fits design. Thanks for the report, closing it now.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#27120
No description provided.